--- a/k8s/backend-service.yaml
+++ b/k8s/backend-service.yaml
@@ -1,13 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  labels:
-    app: backend
   name: backend
 spec:
+  type: NodePort
   ports:
-    - name: "http"
-      port: 5000
+    - port: 5000
       targetPort: 5000
+      nodePort: 30001
   selector:
     app: backend
