changed code to retry db connection

--- a/k8s/db-secrets.yml
+++ b/k8s/db-secrets.yml
@@ -4,5 +4,5 @@ metadata:
   name: db-secrets
 type: Opaque
 data:
-  DB_PASSWORD: UGF5bmUxQG1heDI= 
-  MYSQL_ROOT_PASSWORD: UGF5bmUxQG1heDI=  
+  DB_PASSWORD: cm9vdA==
+  MYSQL_ROOT_PASSWORD: cm9vdA== 
