--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   # MySQL Database
   db:
-    image: mysql:8.0
+    image: mysql:9.0
     container_name: mysql_db
     env_file:
       - .env
@@ -9,6 +9,8 @@ services:
       - db_data:/var/lib/mysql
     networks:
       - app-network
+    ports:
+      - "3306:3306"
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
       interval: 10s
